one page con queries

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div class="logo">
 
                 <div class="img">
-                    <img src="images/logo.png" alt="" style="width: 40px; height: 40px;  ">
+                    <img src="images/logo.png" alt="">
                 </div>
 
                 <div class="nombre">
@@ -33,7 +33,7 @@
                     <a href="#">Home</a>
                     <a href="#">About</a>
                     <a href="#">Blog</a>
-                    <a href="#">Contact</a>
+                    <a href="#">Contacto</a>
                 </nav>
             </div>
         </section>
@@ -45,25 +45,28 @@
 
     <section class="seccion1">
 
-        <div class="texto">
-            <h1 class="titulo">Amazing <br> Holiday</h1>
-        </div>
-
-        <div class="v-line">
-            <div class="line"></div>
-        </div>
-
-
-
-        <div class="container">
-            <div class="h2-titulo">
-                <h2>Enrique Iglesias</h2>
+        <div class="container-seccion1">
+            <div class="texto">
+                <h1 class="titulo">Amazing <br> Holiday</h1>
             </div>
 
-            <div class="texto-h2">
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. <br> Proin Pharetra vestibulum lactus, at
-                    rutrum
-                    lorem posuere id. <br> In ut nisi quam. In euismod, massa nec dignissim</p>
+            <div class="v-line">
+                <div class="line"></div>
+            </div>
+
+
+
+            <div class="container">
+                <div class="h2-titulo">
+                    <h2>Enrique Iglesias</h2>
+                </div>
+
+                <div class="texto-h2">
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. <br> Proin Pharetra vestibulum lactus,
+                        at
+                        rutrum
+                        lorem posuere id. <br> In ut nisi quam. In euismod, massa nec dignissim</p>
+                </div>
             </div>
         </div>
     </section>
@@ -152,7 +155,7 @@
 
 
     <!-- ---------------------------------------------SECCION 5--------------------------------------------->
-   
+
     <section class="seccion5">
         <div class="container-perfil">
 
@@ -182,7 +185,7 @@
 
     <section class="seccion6">
 
-        
+
     </section>
 
 
